Add istanbul code coverage support

--- a/tests/manual/debug/index.html
+++ b/tests/manual/debug/index.html
@@ -16,6 +16,10 @@
 
 		<script src="../../libs/jquery-1.11.1.js"></script>
 		<script src="/webpack-server/main.js"></script>
+		<script src="../../../src/plugins/bbcode.js"></script>
+		<script src="../../../src/plugins/xhtml.js"></script>
+		<script src="../../../src/plugins/undo.js"></script>
+		<script src="../../../src/plugins/plaintext.js"></script>
 
 		<link rel="stylesheet"
 			href="http://fonts.googleapis.com/css?family=Open+Sans:400,500,700">
