--- a/tests/manual/debug/index.html
+++ b/tests/manual/debug/index.html
@@ -19,6 +19,8 @@
 		<script src="../../../src/plugins/bbcode.js"></script>
 		<script src="../../../src/plugins/xhtml.js"></script>
 		<script src="../../../src/plugins/undo.js"></script>
+		<script src="../../../src/plugins/autoyoutube.js"></script>
+		<script src="../../../src/plugins/format.js"></script>
 		<script src="../../../src/plugins/plaintext.js"></script>
 
 		<link rel="stylesheet"
