Make plugins, formats and icons support es6 modules. #584

--- a/tests/manual/debug/index.html
+++ b/tests/manual/debug/index.html
@@ -15,17 +15,17 @@
 		<script src="../../libs/less-1.7.0.min.js"></script>
 
 		<script src="/webpack-build/main.js"></script>
-		<script src="../../../src/formats/bbcode.js"></script>
-		<script src="../../../src/formats/xhtml.js"></script>
-		<script src="../../../src/plugins/undo.js"></script>
-		<script src="../../../src/plugins/autoyoutube.js"></script>
-		<script src="../../../src/plugins/format.js"></script>
-		<script src="../../../src/plugins/plaintext.js"></script>
-		<script src="../../../src/plugins/autosave.js"></script>
-		<script src="../../../src/plugins/dragdrop.js"></script>
-		<script src="../../../src/icons/monocons.js"></script>
-		<script src="../../../src/icons/material.js"></script>
-		<script src="../../../src/icons/iconmoon.js"></script>
+		<script src="/webpack-build/formats/bbcode.js"></script>
+		<script src="/webpack-build/formats/xhtml.js"></script>
+		<script src="/webpack-build/plugins/undo.js"></script>
+		<script src="/webpack-build/plugins/autoyoutube.js"></script>
+		<script src="/webpack-build/plugins/format.js"></script>
+		<script src="/webpack-build/plugins/plaintext.js"></script>
+		<script src="/webpack-build/plugins/autosave.js"></script>
+		<script src="/webpack-build/plugins/dragdrop.js"></script>
+		<script src="/webpack-build/icons/monocons.js"></script>
+		<script src="/webpack-build/icons/material.js"></script>
+		<script src="/webpack-build/icons/iconmoon.js"></script>
 		
 		<link rel="stylesheet"
 			href="http://fonts.googleapis.com/css?family=Open+Sans:400,500,700">
